--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -67,9 +67,9 @@
 
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
-                                        <li><a href="about.html">about</a></li>
-                                        <li><a href="projects.html">projects</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="about">about</a></li>
+                                        <li><a href="projects">projects</a></li>
+                                        <li><a href="contact">Contact</a></li>
                                     </ul>
                                 </div>
 
