--- a/04 - Portafolio/Backend/src/main/resources/templates/about.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html xmlns:th="http://www.thymeleaf.org" lang="zxx">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,22 +11,22 @@
     <title>Noxfolio - Personal Portfolio Resume HTML Template || About Me</title>
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    
+
     <!-- Flaticon -->
-    <link rel="stylesheet" href="assets/css/flaticon.min.css">
+    <link rel="stylesheet" th:href="@{/css/flaticon.min.css}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="assets/css/fontawesome-5.14.0.min.css">
+    <link rel="stylesheet" th:href="@{/css/fontawesome-5.14.0.min.css}">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <!-- Nice Select -->
-    <link rel="stylesheet" href="assets/css/nice-select.min.css">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <!-- Magnific Popup -->
+    <link rel="stylesheet" th:href="@{/css/nice-select.min.css}">
     <!-- Animate -->
-    <link rel="stylesheet" href="assets/css/animate.min.css">
+    <link rel="stylesheet" th:href="@{/css/animate.min.css}">
     <!-- Slick -->
-    <link rel="stylesheet" href="assets/css/slick.min.css">
+    <link rel="stylesheet" th:href="@{/css/slick.min.css}">
     <!-- Main Style -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
 </head>
 <body class="home-one">
     <div class="page-wrapper">
@@ -628,26 +628,31 @@
 
     </div>
     <!--End pagewrapper-->
-   
-    
+
+
     <!-- Jquery -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- Appear Js -->
-    <script src="assets/js/appear.min.js"></script>
+    <script th:src="@{/js/appear.min.js}"></script>
     <!-- Slick -->
-    <script src="assets/js/slick.min.js"></script>
+    <script th:src="@{/js/slick.min.js}"></script>
     <!-- Nice Select -->
-    <script src="assets/js/jquery.nice-select.min.js"></script>
+    <script th:src="@{/js/jquery.nice-select.min.js}"></script>
     <!-- Image Loader -->
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
+    <script th:src="@{/js/imagesloaded.pkgd.min.js}"></script>
     <!-- Isotope -->
-    <script src="assets/js/isotope.pkgd.min.js"></script>
+    <script th:src="@{/js/isotope.pkgd.min.js}"></script>
     <!--  WOW Animation -->
-    <script src="assets/js/wow.min.js"></script>
+    <script th:src="@{/js/wow.min.js}"></script>
     <!-- Custom script -->
-    <script src="assets/js/script.js"></script>
+    <script th:src="@{/js/script.js}"></script>
+
+    <!-- For Contact Form -->
+    <script th:src="@{/js/jquery.ajaxchimp.min.js}"></script>
+    <script th:src="@{/js/form-validator.min.js}"></script>
+    <script th:src="@{/js/contact-form-script.js}"></script>
 
 </body>
 </html>
