--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -151,11 +151,11 @@
                     <div class="col-lg-3 col-sm-5 order-lg-3">
                         <div class="hero-counter-wrap ms-lg-auto rmb-55 wow fadeInUp delay-0-4s">
                             <div class="counter-item counter-text-wrap">
-                                <span class="count-text plus" data-speed="3000" data-stop="13">0</span>
-                                <span class="counter-title">Years Of Experience</span>
+                                <span class="count-text plus" data-speed="3000" data-stop="80">0</span>
+                                <span class="counter-title">Junior Developer</span>
                             </div>
                             <div class="counter-item counter-text-wrap">
-                                <span class="count-text k-plus" data-speed="3000" data-stop="8">0</span>
+                                <span class="count-text k-plus" data-speed="3000" data-stop="4">0</span>
                                 <span class="counter-title">Project Complete</span>
                             </div>
                         </div>
@@ -191,28 +191,28 @@
                             <div class="about-content-part rel z-2 rmb-55">
                                 <div class="section-title mb-35 wow fadeInUp delay-0-2s">
                                     <span class="sub-title mb-15">About Me</span>
-                                    <h2>Professional <span>Problem Solutions</span> For Digital Products</h2>
-                                    <p>At vero eos et accusamus etodio dignissimos ducimus praesentium voluptatum corrupti quos dolores quas molestias excepturi sint occaecati cupiditate provident qui officia deserunt mollitia animi, id est laborum et dolorum</p>
+                                    <h2>Junior <span>Backend Developer</span></h2>
+                                    <p>Im a 21 years old Softweare Engiennier specialiced on backend development. Agregar descripcion de chatgpt</p>
                                 </div>
                                 <ul class="list-style-one two-column wow fadeInUp delay-0-2s">
-                                    <li>Branding & Design</li>
-                                    <li>Digital Marketing</li>
-                                    <li>Web Development</li>
-                                    <li>Product Design</li>
+                                    <li>Spring Boot</li>
+                                    <li>SOLID principies</li>
+                                    <li>Design Patterns</li>
+                                    <li>Java Dev</li>
                                 </ul>
                                 <div class="about-info-box mt-25 wow fadeInUp delay-0-2s">
                                     <div class="info-box-item">
                                         <i class="far fa-envelope"></i>
                                         <div class="content">
                                             <span>Email Us</span><br>
-                                            <a href="mailto:support@gmail.com">support@gmail.com</a>
+                                            <a href="mailto:dnielquesada@icloud.com">dnielquesada@icloud.com</a>
                                         </div>
                                     </div>
                                     <div class="info-box-item">
                                         <i class="far fa-phone"></i>
                                         <div class="content">
-                                            <span>Make A Call</span><br>
-                                            <a href="callto:+000(123)45688">+880 (123) 456 88</a>
+                                            <span>Whatsapp Me</span><br>
+                                            <a href="callto:+53 55312883">+53 55312883</a>
                                         </div>
                                     </div>
                                 </div>
@@ -248,7 +248,7 @@
             </div>
         </section>
         <!-- About Area end -->
-        
+
 
         <!-- Services Area start -->
         <section class="services-area pt-130 rpt-100 pb-100 rpb-70 rel z-1">
@@ -256,7 +256,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-8">
                         <div class="section-title text-center mb-60 wow fadeInUp delay-0-2s">
-                            <span class="sub-title mb-15">Popular Services</span>
+                            <span class="sub-title mb-15">My Services</span>
                             <h2>My <span>Special Service</span> For your Business Development</h2>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
                         <div class="service-item wow fadeInUp delay-0-2s">
                             <div class="number">01.</div>
                             <div class="content">
-                                <h4>Brand Identity Design</h4>
+                                <h4>Backend Development</h4>
                                 <p>Dignissimos ducimus blanditiis praesen</p>
                             </div>
                             <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
@@ -333,8 +333,8 @@
             </div>
         </section>
         <!-- Services Area end -->
-        
-        
+
+
         <!-- Skill Area start -->
         <section class="skill-area rel z-1">
             <div class="for-bgc-black pt-130 rpt-100 pb-100 rpb-70">
@@ -357,7 +357,7 @@
                                         <div class="skill-item wow fadeInUp delay-0-2s">
                                             <img src="assets/images/skills/skill1.png" alt="Skill">
                                             <h5>Figma</h5>
-                                            <span class="percent">95%</span>
+                                            <span class="percent"></span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
