changes on index

--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -185,7 +185,7 @@
                             <div class="section-title mb-35 wow fadeInUp delay-0-2s">
                                 <span class="sub-title mb-15">About Me</span>
                                 <h2>Junior <span>Backend Developer</span></h2>
-                                <p>Im a 21 years old Softweare Engiennier specialiced on backend development. Agregar descripcion de chatgpt</p>
+                                <p>I'm a 21-year-old Software Engineer specializing in backend development. As a junior programmer, my focus is on Java and Spring Boot, enabling me to build efficient, scalable, and secure server-side applications. I'm committed to continuous learning and skill enhancement</p>
                             </div>
                             <ul class="list-style-one two-column wow fadeInUp delay-0-2s">
                                 <li>Spring Boot</li>
@@ -212,20 +212,64 @@
                         </div>
                     </div>
                     <div class="col-lg-5">
-                        <div class="about-image-part wow fadeInUp delay-0-3s">
-                            <img th:src="@{/images/about/about.jpg}" alt="About Me">
-                            <div class="about-btn btn-one wow fadeInRight delay-0-4s">
-                                <img th:src="@{/images/about/btn-image1.png}" alt="Image">
-                                <h6>Experience Designer</h6>
-                                <i class="fas fa-arrow-right"></i>
-                            </div>
-                            <div class="about-btn btn-two wow fadeInRight delay-0-5s">
-                                <img th:src="@{/images/about/btn-image2.png}" alt="Image">
-                                <h6>Mark J. Collins</h6>
-                                <i class="fas fa-arrow-right"></i>
-                            </div>
-                            <div class="dot-shape">
-                                <img th:src="@{/images/shape/about-dot.png}" alt="Shape">
+                        <div class="skill-items-wrap">
+                            <div class="row">
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-2s">
+                                        <img th:src="@{/images/skills/skill1.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent"></span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-3s">
+                                        <img th:src="@{/images/skills/skill2.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">83</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-4s">
+                                        <img th:src="@{/images/skills/skill3.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">93%</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-5s">
+                                        <img th:src="@{/images/skills/skill4.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">84%</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-2s">
+                                        <img th:src="@{/images/skills/skill5.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">65%</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-3s">
+                                        <img th:src="@{/images/skills/skill6.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">86%</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-4s">
+                                        <img th:src="@{/images/skills/skill7.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">62%</span>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
+                                    <div class="skill-item wow fadeInUp delay-0-5s">
+                                        <img th:src="@{/images/skills/skill8.png}" alt="Skill">
+                                        <h5>Figma</h5>
+                                        <span class="percent">94%</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -325,99 +369,7 @@
             </div>
         </section>
         <!-- Services Area end -->
-
-
-        <!-- Skill Area start -->
-        <section class="skill-area rel z-1">
-            <div class="for-bgc-black pt-130 rpt-100 pb-100 rpb-70">
-                <div class="container">
-                    <div class="row gap-100">
-                        <div class="col-lg-5">
-                            <div class="skill-content-part rel z-2 rmb-55 wow fadeInUp delay-0-2s">
-                                <div class="section-title mb-40">
-                                    <span class="sub-title mb-15">My Skills</span>
-                                    <h2>Let’s Explore Popular <span>Skills & Experience</span></h2>
-                                    <p>Sed ut perspiciatis unde omnis iste natus to voluptatem accusantium doloremque laudantium, totam rem aperiamc eaque ipsa quae ab illo inventore veritatis</p>
-                                </div>
-                                <a href="about.html" class="theme-btn">Learn More <i class="far fa-angle-right"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-7">
-                            <div class="skill-items-wrap">
-                                <div class="row">
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-2s">
-                                        <img th:src="@{/images/skills/skill1.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent"></span>
-                                    </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-3s">
-                                            <img th:src="@{/images/skills/skill2.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">83</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-4s">
-                                            <img th:src="@{/images/skills/skill3.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">93%</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-5s">
-                                            <img th:src="@{/images/skills/skill4.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">84%</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-2s">
-                                            <img th:src="@{/images/skills/skill5.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">65%</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-3s">
-                                            <img th:src="@{/images/skills/skill6.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">86%</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-4s">
-                                            <img th:src="@{/images/skills/skill7.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">62%</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
-                                        <div class="skill-item wow fadeInUp delay-0-5s">
-                                            <img th:src="@{/images/skills/skill8.png}" alt="Skill">
-                                            <h5>Figma</h5>
-                                            <span class="percent">94%</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bg-lines">
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-            </div>
-        </section>
-        <!-- Skill Area end -->
-        
-        
+    
         <!-- Projects Area start -->
         <section class="projects-area pt-130 rpt-100 pb-100 rpb-70 rel z-1">
             <div class="container">
