--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -217,14 +217,14 @@
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-2s">
                                         <img th:src="@{/images/skills/skill1.png}" alt="Skill">
-                                        <h5>Figma</h5>
+                                        <h5>Java</h5>
                                         <span class="percent"></span>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-3s">
                                         <img th:src="@{/images/skills/skill2.png}" alt="Skill">
-                                        <h5>Figma</h5>
+                                        <h5>Spring Boot</h5>
                                         <span class="percent">83</span>
                                     </div>
                                 </div>
@@ -369,7 +369,7 @@
             </div>
         </section>
         <!-- Services Area end -->
-    
+
         <!-- Projects Area start -->
         <section class="projects-area pt-130 rpt-100 pb-100 rpb-70 rel z-1">
             <div class="container">
