--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -218,56 +218,48 @@
                                     <div class="skill-item wow fadeInUp delay-0-2s">
                                         <img th:src="@{/images/skills/skill1.png}" alt="Skill">
                                         <h5>Java</h5>
-                                        <span class="percent"></span>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-3s">
                                         <img th:src="@{/images/skills/skill2.png}" alt="Skill">
                                         <h5>Spring Boot</h5>
-                                        <span class="percent">83</span>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-4s">
                                         <img th:src="@{/images/skills/skill3.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent">93%</span>
+                                        <h5>Postgre</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-5s">
                                         <img th:src="@{/images/skills/skill4.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent">84%</span>
+                                        <h5>C#</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-2s">
                                         <img th:src="@{/images/skills/skill5.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent">65%</span>
+                                        <h5>Python</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-3s">
                                         <img th:src="@{/images/skills/skill6.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent">86%</span>
+                                        <h5>Git</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-4s">
                                         <img th:src="@{/images/skills/skill7.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent">62%</span>
+                                        <h5>Github</h5>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                     <div class="skill-item wow fadeInUp delay-0-5s">
                                         <img th:src="@{/images/skills/skill8.png}" alt="Skill">
-                                        <h5>Figma</h5>
-                                        <span class="percent">94%</span>
+                                        <h5>Docker</h5>
                                     </div>
                                 </div>
                             </div>
