--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -61,9 +61,9 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li><a th:href="@{/about}">about</a></li>
-                                    <li><a th:href="@{/projects}">projects</a></li>
-                                    <li><a th:href="@{/contact}">Contact</a></li>
+                                    <li><a href="https://www.linkedin.com/in/daniel-quesada-6a24822aa/">Linkedln</a></li>
+                                    <li><a href="https://github.com/dnielpy?tab=repositories">GitHub</a></li>
+                                    <li><a th:href="@{mailto:dnielquesada@icloud.com}">Contact</a></li>
                                 </ul>
                             </div>
 
@@ -135,7 +135,7 @@
                     <div class="hero-content rmb-55 wow fadeInUp delay-0-2s">
                         <span class="h2">Hello, i’m </span>
                         <h1><b>Daniel Quesada</b> Backend Developer</h1>
-                        <p>We denounce with righteous indignation dislike demoralized by the charms of pleasure</p>
+                        <p>Hey there 🖖🏻. Welcome to my portfolio.</p>
                         <div class="hero-btns">
                             <a th:href="@{/contact}" class="theme-btn">Hire Me <i class="far fa-angle-right"></i></a>
                         </div>
@@ -144,12 +144,16 @@
                 <div class="col-lg-3 col-sm-5 order-lg-3">
                     <div class="hero-counter-wrap ms-lg-auto rmb-55 wow fadeInUp delay-0-4s">
                         <div class="counter-item counter-text-wrap">
-                            <span class="count-text plus" data-speed="3000" data-stop="80">0</span>
-                            <span class="counter-title">Junior Developer</span>
+                            <span class="count-text plus" data-speed="3000" data-stop="3">0</span>
+                            <span class="counter-title">Years of experience</span>
                         </div>
                         <div class="counter-item counter-text-wrap">
-                            <span class="count-text k-plus" data-speed="3000" data-stop="4">0</span>
-                            <span class="counter-title">Project Complete</span>
+                            <span class="count-text plus" data-speed="3000" data-stop="5">0</span>
+                            <span class="counter-title">Languages mastered</span>
+                        </div>
+                        <div class="counter-item counter-text-wrap">
+                            <span class="count-text plus" data-speed="3000" data-stop="2">0</span>
+                            <span class="counter-title">Certifications obtained</span>
                         </div>
                     </div>
                 </div>
@@ -278,90 +282,6 @@
     </section>
     <!-- About Area end -->
 
-    <!-- Services Area start -->
-    <section class="services-area pt-130 rpt-100 pb-100 rpb-70 rel z-1">
-        <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6 col-lg-8">
-                        <div class="section-title text-center mb-60 wow fadeInUp delay-0-2s">
-                            <span class="sub-title mb-15">My Services</span>
-                            <h2>My <span>Special Service</span> For your Business Development</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="service-item wow fadeInUp delay-0-2s">
-                            <div class="number">01.</div>
-                            <div class="content">
-                                <h4>Backend Development</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
-                            </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="service-item wow fadeInUp delay-0-4s">
-                            <div class="number">02.</div>
-                            <div class="content">
-                                <h4>Website Design</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
-                            </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="service-item wow fadeInUp delay-0-2s">
-                            <div class="number">03.</div>
-                            <div class="content">
-                                <h4>Mobile Application Design</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
-                            </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="service-item wow fadeInUp delay-0-4s">
-                            <div class="number">04.</div>
-                            <div class="content">
-                                <h4>Motion Graphics Design</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
-                            </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="service-item wow fadeInUp delay-0-2s">
-                            <div class="number">05.</div>
-                            <div class="content">
-                                <h4>Website Development</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
-                            </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="service-item wow fadeInUp delay-0-4s">
-                            <div class="number">06.</div>
-                            <div class="content">
-                                <h4>SEO & Digital Marketing</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
-                            </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bg-lines">
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-            </div>
-        </section>
-        <!-- Services Area end -->
-
         <!-- Projects Area start -->
         <section class="projects-area pt-130 rpt-100 pb-100 rpb-70 rel z-1">
             <div class="container">
@@ -369,22 +289,22 @@
                     <div class="col-xl-12">
                         <div class="section-title text-center mb-60 wow fadeInUp delay-0-2s">
                             <span class="sub-title mb-15">Latest Works</span>
-                            <h2>Explore My Popular <span>Projects</span></h2>
+                            <h2>Explore My <span>Projects</span></h2>
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center pb-25">
                     <div class="col-lg-6">
                         <div class="project-image wow fadeInLeft delay-0-2s">
-                            <img src="assets/images/projects/project1.jpg" alt="Project">
+                            <img src="images/projects/project1.jpg" alt="Project">
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-6">
                         <div class="project-content wow fadeInRight delay-0-2s">
                             <span class="sub-title">Product Design</span>
-                            <h2><a href="project-details.html">Mobile Application Design</a></h2>
-                            <p>Sed ut perspiciatis unde omnin natus totam rem aperiam eaque inventore veritatis architecto beatae</p>
-                            <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
+                            <h2><a href="https://github.com/dnielpy/BackendProjects/tree/main/04%20-%20Portafolio/Backend">Web Portfolio</a></h2>
+                            <p>This is a small portfolio showcasing my work and skills.</p>
+                            <a href="https://github.com/dnielpy/BackendProjects/tree/main/04%20-%20Portafolio/Backendl" class="details-btn"><i class="far fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
