finished from now. i have to add the complete projects

--- a/04 - Portafolio/Backend/src/main/resources/templates/index.html
+++ b/04 - Portafolio/Backend/src/main/resources/templates/index.html
@@ -71,61 +71,11 @@
                         <!-- Main Menu End-->
                     </div>
 
-                    <!-- Menu Button -->
-                    <div class="menu-btns">
-                        <!-- menu sidbar -->
-                        <div class="menu-sidebar">
-                            <button>
-                                <img th:src="@{/images/sidebar-tottler.svg}" alt="Toggler">
-                            </button>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
         <!--End Header Upper-->
     </header>
-
-    <!--Form Back Drop-->
-    <div class="form-back-drop"></div>
-
-    <!-- Hidden Sidebar -->
-    <section class="hidden-bar">
-        <div class="inner-box text-center">
-            <div class="cross-icon"><span class="fa fa-times"></span></div>
-            <div class="title">
-                <h4>Get Appointment</h4>
-            </div>
-
-            <!--Appointment Form-->
-            <div class="appointment-form">
-                <form method="post" action="contact.html">
-                    <div class="form-group">
-                        <input type="text" name="text" value="" placeholder="Name" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" name="email" value="" placeholder="Email Address" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea placeholder="Message" rows="5"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="theme-btn">Submit now</button>
-                    </div>
-                </form>
-            </div>
-
-            <!--Social Icons-->
-            <div class="social-style-one">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-            </div>
-        </div>
-    </section>
-    <!--End Hidden Sidebar -->
-
 
     <!-- Hero Section Start -->
     <section class="main-hero-area pt-150 pb-80 rel z-1">
@@ -144,16 +94,8 @@
                 <div class="col-lg-3 col-sm-5 order-lg-3">
                     <div class="hero-counter-wrap ms-lg-auto rmb-55 wow fadeInUp delay-0-4s">
                         <div class="counter-item counter-text-wrap">
-                            <span class="count-text plus" data-speed="3000" data-stop="3">0</span>
-                            <span class="counter-title">Years of experience</span>
-                        </div>
-                        <div class="counter-item counter-text-wrap">
-                            <span class="count-text plus" data-speed="3000" data-stop="5">0</span>
-                            <span class="counter-title">Languages mastered</span>
-                        </div>
-                        <div class="counter-item counter-text-wrap">
-                            <span class="count-text plus" data-speed="3000" data-stop="2">0</span>
-                            <span class="counter-title">Certifications obtained</span>
+                            <span class="count-text plus" data-speed="3000" data-stop="4">0</span>
+                            <span class="counter-title">Completed Projects</span>
                         </div>
                     </div>
                 </div>
@@ -209,7 +151,7 @@
                                     <i class="far fa-phone"></i>
                                     <div class="content">
                                         <span>Whatsapp Me</span><br>
-                                        <a th:href="@{callto:+53 55312883}">+53 55312883</a>
+                                        <a th:href="@{callto:+53 50727448}">+53 50727448</a>
                                     </div>
                                 </div>
                             </div>
