--- a/05 -  Inventory Management (Full Backen)/src/main/resources/static/style.css
+++ b/05 -  Inventory Management (Full Backen)/src/main/resources/static/style.css
@@ -33,7 +33,7 @@ p{
 }
 .box{
     background-color: rgb(24, 15, 39);
-    height: 250px;
+    height: 330px;
     width: 600px;
     margin: auto;
     margin-top: 200px;
@@ -59,7 +59,9 @@ h4{
     text-shadow: none;
     font-style: italic;
     font-weight: lighter;
-    padding-top: 30px;
+    padding-top: 40px;
+    padding-left: 100px;
+
 }
 a{
     color: rgba(255, 255, 255, 0.7);
@@ -97,6 +99,7 @@ h3{
     color: white;
 }
 button{
+    padding-left: 100px;
     width: 20%;
     height: 30px;
     margin: 40px 0 0 245px;
@@ -106,11 +109,23 @@ button{
     box-shadow: 0 0 10px 0 #3d10a5;
     color: aliceblue;
 }
+
 .link{
     font-size: 16px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-bottom: none;
     color: rgba(255, 255, 255, 0.7);
     text-decoration: none;
+}
+.create{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.112);
+    text-shadow: none;
+    font-style: italic;
+    font-weight: lighter;
+    padding-top: 0px;
+    padding-left: 100px
 }
 
