05 - Agregado el frontend

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/about.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/about.html
@@ -9,9 +9,7 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<!-- Javascript -->	
-		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
  	</head>
 <body>
 
@@ -20,7 +18,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -29,7 +27,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -38,7 +36,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/heart.png">
+						<img src="../static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -49,11 +47,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -61,7 +59,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -75,14 +73,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -108,7 +106,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -118,80 +116,10 @@
 
 	<div class="container">
 		<main>
-			<div class="breadcrumb">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li> / </li>
-					<li>Account</li>
-				</ul>
-			</div> <!-- End of Breadcrumb-->
-			
-			<div class="account-page">
-				<div class="profile">
-					<div class="profile-img">
-						<img src="img/product/img5.jpg">
-						<h2>John Doe</h2>
-						<p>john_doe@mail.com</p>
-					</div>
-					<ul>
-						<li><a href="account.html" class="active">Account <span>></span></a></li>
-						<li><a href="orders.html">My Orders <span>></span></a></li>
-						<li><a href="change-password.html">Change Password <span>></span></a></li>
-						<li><a href="">Logout <span>></span></a></li>
-					</ul>
-				</div>
-				<div class="account-detail">
-					<h2>Account</h2>
-					<div class="billing-detail">					
-						<form class="checkout-form">
-							<div class="form-inline">
-								<div class="form-group">
-									<label>First Name</label>
-									<input type="text" id="fname" name="fname" value="John">
-								</div>
-								<div class="form-group">
-									<label>Last Name</label>
-									<input type="text" id="lname" name="lname" value="Doe">
-								</div>
-							</div>
-							<div class="form-inline">
-								<div class="form-group">
-									<label>Country</label>
-									<select id="country" name="country">
-										<option selected>---Select a Country---</option>
-										<option value="pakistan">Pakistan</option>
-									</select>
-								</div>
-								<div class="form-group">
-									<label>City</label>
-									<select id="city" name="city">
-										<option selected>---Select a City---</option>
-										<option value="karachi">Karachi</option>
-									</select>
-								</div>
-							</div>
-							<div class="form-group">
-								<label>Address</label>
-								<textarea style="resize:none" id="address" name="address" rows="3">xyz area, street 24 </textarea>
-							</div>
-							<div class="form-inline">					
-								<div class="form-group">
-									<label>Tel</label>
-									<input type="text" id="tel" name="tel" minlength="11" maxlength="11" value="555-XXXXXXX">
-								</div>
-								<div class="form-group">
-									<label>Mobile</label>
-									<input type="text" id="mobile" name="mobile" minlength="11" maxlength="11" value="555-XXXXXXX">
-								</div>
-							</div>
-							<div class="form-group">
-								<label></label>
-								<input type="submit" id="update" name="update" value="Update">
-							</div>
-						</form>		
-					</div>
-				</div>				
-			</div>		
+			<div class="about">
+				<h2 class="heading">About</h2>
+				<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Odit quas animi, unde? Autem at pariatur quia laboriosam soluta, quibusdam voluptates incidunt quos eligendi architecto tenetur, amet, cupiditate in recusandae, sint quaerat sunt reiciendis voluptatum repudiandae similique odio molestiae laudantium. Fugit illum voluptatum esse facilis, omnis dolorum amet ut sed ea magnam vitae quaerat dolor. Cum dolorum ducimus similique nostrum laudantium pariatur, repudiandae, libero ratione id ut culpa ea consequuntur quia totam magnam quasi quis doloremque dolor quibusdam tenetur asperiores reiciendis! Cupiditate illum, praesentium facere quibusdam minima facilis quam voluptatem, in vel tenetur dolores repellat assumenda ducimus quas distinctio sequi ab numquam sunt laudantium voluptatibus modi dolor at nulla. Amet accusamus officiis itaque reiciendis architecto repellat, suscipit? Modi distinctio rerum voluptatum, natus, ad repellendus corporis adipisci veritatis aliquam, commodi sed non recusandae nesciunt facere mollitia optio, ipsa eligendi minus sequi amet? Officiis distinctio mollitia, laborum beatae deleniti sint, ipsa soluta similique?</p>
+			</div>
 		</main> <!-- Main Area -->
 	</div>
 
@@ -231,9 +159,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -245,7 +173,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -257,9 +185,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
