--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/account.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/account.html
@@ -9,25 +9,9 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
 		<!-- Javascript -->	
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-  		<script>
-  			$(document).ready(function(){
-  				
-  				$('input[type="radio"]').change(function(){
-  					
-  					if (this.value == 'easypaisa') {
-  						
-  						$('#easypaisaText').css('display', 'block');
-  					} 
-  					else {
-  						$('#easypaisaText').css('display', 'none');
-  					}
-  					
-  				});
-  			});
-  		</script>
+		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
  	</head>
 <body>
 
@@ -36,7 +20,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -45,7 +29,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -54,7 +38,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/heart.png">
+						<img src="../static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -65,11 +49,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -77,7 +61,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -91,14 +75,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -124,7 +108,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -138,103 +122,75 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li> / </li>
-					<li><a href="shop.html">Shop</a></li>
-					<li> / </li>
-					<li><a href="cart.html">Cart</a></li>
-					<li> / </li>
-					<li>Checkout</li>
+					<li>Account</li>
 				</ul>
 			</div> <!-- End of Breadcrumb-->
-
-			<h2>Billing Detail</h2>
-			<div class="checkout-page">
-				<div class="billing-detail">					
-					<form class="checkout-form">
-						<h4>Shipping Detail</h4>
-						<div class="form-inline">
-							<div class="form-group">
-								<label>First Name</label>
-								<input type="text" id="fname" name="fname">
-							</div>
-							<div class="form-group">
-								<label>Last Name</label>
-								<input type="text" id="lname" name="lname">
-							</div>
-						</div>
-						<div class="form-group">
-							<label>Company Name (Optional)</label>
-							<input type="text" id="cname" name="cname">
-						</div>
-						<div class="form-inline">
-							<div class="form-group">
-								<label>Country</label>
-								<select id="country" name="country">
-									<option>---Select a Country---</option>
-									<option>Pakistan</option>
-								</select>
-							</div>
-							<div class="form-group">
-								<label>City</label>
-								<select id="cityy" name="cityy">
-									<option>---Select a City---</option>
-									<option>Karachi</option>
-								</select>
-							</div>
-						</div>
-						<div class="form-group">
-							<label>Address</label>
-							<textarea style="resize:none" id="address" name="address" rows="3"></textarea>
-						</div>
-						<h4>Login Detail</h4>
-						<div class="form-inline">					
-							<div class="form-group">
-								<label>Email</label>
-								<input type="email" id="email" name="email" autocomplete="off">
-							</div>
-							<div class="form-group">
-								<label>Password</label>
-								<input type="password" id="password" name="password" autocomplete="off">
-							</div>
-						</div>
-						<h4>Contact Detail</h4>
-						<div class="form-inline">					
-							<div class="form-group">
-								<label>Tel</label>
-								<input type="text" id="tel" name="tel" minlength="11" maxlength="11">
-							</div>
-							<div class="form-group">
-								<label>Mobile</label>
-								<input type="text" id="mobile" name="mobile" minlength="11" maxlength="11">
-							</div>
-						</div>
-						<h4>Additional Information (Optional)</h4>
-						<div class="form-group">
-							<label>Order Note</label>
-							<textarea style="resize:none" id="address" name="address" rows="3"></textarea>
-						</div>					
-				</div>
-				<div class="order-summary">
-					<div class="checkout-total">
-						<h3>Order Summary</h3>
-						<ul>
-							<li>Cart Amount: <span>1200</span></li>
-							<li>Delivery Charges: <span>100</span></li>
-							<li>Less: Discount @ 10%: <span>-13</span></li>
-							<hr>
-							<li>Total Amount: <span>1287</span></li>
-							<hr>
-							<li><input type="radio" name="payment"> Cash on Delivery</li>
-							<li><input type="radio" id="easypaisa" name="payment" value="easypaisa"> Easypaisa Account</li>
-							<li>
-								<textarea id="easypaisaText" rows="5" disabled="disable">Please deposit the payment in our easypaisa account# 030X-XXXXXXX after confirm payment kindly send us payment slip and order transaction id on above number.</textarea>
-							</li>
-							<li><input type="radio" name="payment"> Bank Transferred</li>
-							<hr>
-							<li><input type="submit" name="order" value="Place Order"></li>
-						</ul>
+			
+			<div class="account-page">
+				<div class="profile">
+					<div class="profile-img">
+						<img src="../static/img/product/img5.jpg">
+						<h2>John Doe</h2>
+						<p>john_doe@mail.com</p>
 					</div>
-					</form> <!-- End of Checkout Form -->
+					<ul>
+						<li><a href="account.html" class="active">Account <span>></span></a></li>
+						<li><a href="orders.html">My Orders <span>></span></a></li>
+						<li><a href="change-password.html">Change Password <span>></span></a></li>
+						<li><a href="">Logout <span>></span></a></li>
+					</ul>
 				</div>
+				<div class="account-detail">
+					<h2>Account</h2>
+					<div class="billing-detail">					
+						<form class="checkout-form">
+							<div class="form-inline">
+								<div class="form-group">
+									<label>First Name</label>
+									<input type="text" id="fname" name="fname" value="John">
+								</div>
+								<div class="form-group">
+									<label>Last Name</label>
+									<input type="text" id="lname" name="lname" value="Doe">
+								</div>
+							</div>
+							<div class="form-inline">
+								<div class="form-group">
+									<label>Country</label>
+									<select id="country" name="country">
+										<option selected>---Select a Country---</option>
+										<option value="pakistan">Pakistan</option>
+									</select>
+								</div>
+								<div class="form-group">
+									<label>City</label>
+									<select id="city" name="city">
+										<option selected>---Select a City---</option>
+										<option value="karachi">Karachi</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group">
+								<label>Address</label>
+								<textarea style="resize:none" id="address" name="address" rows="3">xyz area, street 24 </textarea>
+							</div>
+							<div class="form-inline">					
+								<div class="form-group">
+									<label>Tel</label>
+									<input type="text" id="tel" name="tel" minlength="11" maxlength="11" value="555-XXXXXXX">
+								</div>
+								<div class="form-group">
+									<label>Mobile</label>
+									<input type="text" id="mobile" name="mobile" minlength="11" maxlength="11" value="555-XXXXXXX">
+								</div>
+							</div>
+							<div class="form-group">
+								<label></label>
+								<input type="submit" id="update" name="update" value="Update">
+							</div>
+						</form>		
+					</div>
+				</div>				
 			</div>		
 		</main> <!-- Main Area -->
 	</div>
@@ -275,9 +231,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -289,7 +245,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -301,9 +257,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
