--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/cart.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/cart.html
@@ -9,9 +9,36 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
 		<!-- Javascript -->	
-		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+  		<script>
+  			$(document).ready(function(){
+  				
+  				$('.prev').on("click", function(){
+
+  					var prev = $(this).closest('.qty').find("input").val();
+  					
+  					if (prev == 1) {
+  						$(this).closest('.qty').find("input").val('1');
+  					}else{
+  						var prevVal = prev - 1;
+  						$(this).closest('.qty').find("input").val(prevVal);
+  					}  					
+  				});
+  				$('.next').on("click", function(){
+
+  					var next = $(this).closest('.qty').find("input").val();
+  					
+  					if (next == 10) {
+  						$(this).closest('.qty').find("input").val('10');
+  					}else{
+  						var nextVal = ++next;
+  						$(this).closest('.qty').find("input").val(nextVal);
+  					}  					
+  				});
+  			});
+  		</script>
  	</head>
 <body>
 
@@ -20,7 +47,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -29,7 +56,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -38,7 +65,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/heart.png">
+						<img src="../static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -49,11 +76,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -61,7 +88,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -75,14 +102,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -108,7 +135,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -122,52 +149,98 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li> / </li>
-					<li><a href="account.html">Account</a></li>
+					<li><a href="shop.html">Shop</a></li>
 					<li> / </li>
-					<li>Change Password</li>
+					<li>Cart</li>
 				</ul>
 			</div> <!-- End of Breadcrumb-->
 
-			
-			<div class="account-page">
-				<div class="profile">
-					<div class="profile-img">
-						<img src="img/product/img5.jpg">
-						<h2>John Doe</h2>
-						<p>user@mail.com</p>
-					</div>						
-					<ul>
-						<li><a href="account.html" class="active">Account <span>></span></a></li>
-						<li><a href="orders.html">My Orders <span>></span></a></li>
-						<li><a href="change-password.html">Change Password <span>></span></a></li>
-						<li><a href="">Logout <span>></span></a></li>
-					</ul>
-				</div>
-				<div class="account-detail">
-					<h2>Change Password</h2>
-					<div class="billing-detail">					
-						<form class="checkout-form">
-							<div class="form-group">
-								<label>Old Password</label>
-								<input type="password" id="old_password" name="old_password">
-							</div>
-							<div class="form-inline">
-								<div class="form-group">
-									<label>New Password</label>
-									<input type="password" id="new_password" name="new_password">
-								</div>
-								<div class="form-group">
-									<label>Confirm Password</label>
-									<input type="password" id="confirm_password" name="confirm_password">
-								</div>
-							</div>
-							<div class="form-group">
-								<label></label>
-								<input type="submit" id="update_pass" name="update_pass" value="Update">
-							</div>
-						</form>		
+			<h2>Shopping Cart</h2>
+			<div class="cart-page">
+				<div class="cart-items">					
+					<table>
+						<thead>
+							<tr>
+								<th colspan="3">Cart Items</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td style="width: 20%;"><img src="../static/img/product/img1.jpg"></td>
+								<td style="width: 60%;">
+									<h2>Product Title</h2>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+									<br>
+									<h3>Price: Rs.1200</h3>
+									<br>
+									<a href="">x</a> Remove
+								</td>
+								<td class="qty" style="width: 15%;">
+									<div class="prev">-</div>
+									<div class="next">+</div>
+									<input type="number" name="cartNumber" class="cartNumber" value="1" min="1" max="10">
+									<br><br>
+									<h3>Rs.1200</h3>
+								</td>
+							</tr>
+							<tr>
+								<td style="width: 20%;"><img src="../static/img/product/img2.jpg"></td>
+								<td style="width: 60%;">
+									<h2>Product Title</h2>
+									<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+									<br>
+									<h3>Price: Rs.1200</h3>
+									<br>
+									<a href="">x</a> Remove
+								</td>
+								<td class="qty" style="width: 15%;">
+									<div class="prev">-</div>
+									<div class="next">+</div>
+									<input type="number" name="cartNumber" class="cartNumber" value="1" min="1" max="10">
+									<br><br>
+									<h3>Rs.1200</h3>
+								</td>
+							</tr>
+							<tr>
+								<td style="width: 20%;"><img src="../static/img/product/img3.jpg"></td>
+								<td style="width: 60%;">
+									<h2>Product Title</h2>
+									<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+									<br>
+									<h3>Price: Rs.1200</h3>
+									<br>
+									<a href="">x</a> Remove
+								</td>
+								<td class="qty" style="width: 15%;">
+									<div class="prev">-</div>
+									<div class="next">+</div>
+									<input type="number" name="cartNumber" class="cartNumber" value="1" min="1" max="10">
+									<br><br>
+									<h3>Rs.1200</h3>
+								</td>
+							</tr>						
+						</tbody>	
+					</table>
+					<div class="pagination">
+						<ul>
+							<li><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+						</ul>
 					</div>
-				</div>				
+				</div>
+				<div class="cart-summary">
+					<div class="checkout-total">
+						<h3>Cart Summary</h3>
+						<ul>
+							<li>Number of Products x 15</li>
+							<li>Number of items x 20</li>
+							<hr>
+							<li>Cart Total <span style="float: right;">Rs.1200</span></li>
+							<li><a href="checkout.html">Go to Checkout</a></li>
+						</ul>
+					</div>
+				</div>
 			</div>		
 		</main> <!-- Main Area -->
 	</div>
@@ -208,9 +281,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -222,7 +295,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -234,9 +307,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
