--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/change-password.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/change-password.html
@@ -9,7 +9,9 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />  		
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<!-- Javascript -->	
+		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
  	</head>
 <body>
 
@@ -18,7 +20,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -27,7 +29,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -36,7 +38,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/heart.png">
+						<img src="../static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -47,11 +49,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -59,7 +61,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -73,14 +75,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -106,7 +108,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -116,31 +118,57 @@
 
 	<div class="container">
 		<main>
-			<div class="contact">
-				<h2 class="heading">Contact Form</h2>
-				<form class="checkout-form">
-					<div class="form-group">
-						<label>First Name</label>
-						<input type="text" id="fname" name="fname">
+			<div class="breadcrumb">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li> / </li>
+					<li><a href="account.html">Account</a></li>
+					<li> / </li>
+					<li>Change Password</li>
+				</ul>
+			</div> <!-- End of Breadcrumb-->
+
+			
+			<div class="account-page">
+				<div class="profile">
+					<div class="profile-img">
+						<img src="../static/img/product/img5.jpg">
+						<h2>John Doe</h2>
+						<p>user@mail.com</p>
+					</div>						
+					<ul>
+						<li><a href="account.html" class="active">Account <span>></span></a></li>
+						<li><a href="orders.html">My Orders <span>></span></a></li>
+						<li><a href="change-password.html">Change Password <span>></span></a></li>
+						<li><a href="">Logout <span>></span></a></li>
+					</ul>
+				</div>
+				<div class="account-detail">
+					<h2>Change Password</h2>
+					<div class="billing-detail">					
+						<form class="checkout-form">
+							<div class="form-group">
+								<label>Old Password</label>
+								<input type="password" id="old_password" name="old_password">
+							</div>
+							<div class="form-inline">
+								<div class="form-group">
+									<label>New Password</label>
+									<input type="password" id="new_password" name="new_password">
+								</div>
+								<div class="form-group">
+									<label>Confirm Password</label>
+									<input type="password" id="confirm_password" name="confirm_password">
+								</div>
+							</div>
+							<div class="form-group">
+								<label></label>
+								<input type="submit" id="update_pass" name="update_pass" value="Update">
+							</div>
+						</form>		
 					</div>
-					<div class="form-group">
-						<label>Last Name</label>
-						<input type="text" id="lname" name="lname">
-					</div>
-					<div class="form-group">
-						<label>Email Address</label>
-						<input type="email" id="email" name="email">
-					</div>
-					<div class="form-group">
-						<label>Your Message</label>
-						<textarea name="message" id="message" rows="10"></textarea>
-					</div>
-					<div class="form-group">
-						<label></label>
-						<input type="submit" id="contact" name="contact" value="Send">
-					</div>
-				</form>	
-			</div>
+				</div>				
+			</div>		
 		</main> <!-- Main Area -->
 	</div>
 
@@ -180,9 +208,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -194,7 +222,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -206,9 +234,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
