--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/contact.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/contact.html
@@ -9,7 +9,7 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />  		
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
  	</head>
 <body>
 
@@ -18,7 +18,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -27,7 +27,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/heart.png">
+						<img src="../static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -47,11 +47,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -73,14 +73,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -106,7 +106,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -116,9 +116,30 @@
 
 	<div class="container">
 		<main>
-			<div class="about">
-				<h2 class="heading">About</h2>
-				<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Odit quas animi, unde? Autem at pariatur quia laboriosam soluta, quibusdam voluptates incidunt quos eligendi architecto tenetur, amet, cupiditate in recusandae, sint quaerat sunt reiciendis voluptatum repudiandae similique odio molestiae laudantium. Fugit illum voluptatum esse facilis, omnis dolorum amet ut sed ea magnam vitae quaerat dolor. Cum dolorum ducimus similique nostrum laudantium pariatur, repudiandae, libero ratione id ut culpa ea consequuntur quia totam magnam quasi quis doloremque dolor quibusdam tenetur asperiores reiciendis! Cupiditate illum, praesentium facere quibusdam minima facilis quam voluptatem, in vel tenetur dolores repellat assumenda ducimus quas distinctio sequi ab numquam sunt laudantium voluptatibus modi dolor at nulla. Amet accusamus officiis itaque reiciendis architecto repellat, suscipit? Modi distinctio rerum voluptatum, natus, ad repellendus corporis adipisci veritatis aliquam, commodi sed non recusandae nesciunt facere mollitia optio, ipsa eligendi minus sequi amet? Officiis distinctio mollitia, laborum beatae deleniti sint, ipsa soluta similique?</p>
+			<div class="contact">
+				<h2 class="heading">Contact Form</h2>
+				<form class="checkout-form">
+					<div class="form-group">
+						<label>First Name</label>
+						<input type="text" id="fname" name="fname">
+					</div>
+					<div class="form-group">
+						<label>Last Name</label>
+						<input type="text" id="lname" name="lname">
+					</div>
+					<div class="form-group">
+						<label>Email Address</label>
+						<input type="email" id="email" name="email">
+					</div>
+					<div class="form-group">
+						<label>Your Message</label>
+						<textarea name="message" id="message" rows="10"></textarea>
+					</div>
+					<div class="form-group">
+						<label></label>
+						<input type="submit" id="contact" name="contact" value="Send">
+					</div>
+				</form>	
 			</div>
 		</main> <!-- Main Area -->
 	</div>
@@ -159,9 +180,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -173,7 +194,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -185,9 +206,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
