--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/refund.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/refund.html
@@ -9,7 +9,7 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />  		
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
  	</head>
 <body>
 
@@ -18,7 +18,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -27,7 +27,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/heart.png">
+						<img src="../static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -47,11 +47,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -73,14 +73,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -106,7 +106,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -159,9 +159,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -173,7 +173,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -185,9 +185,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
