--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
@@ -9,20 +9,25 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		<!-- Javascript -->	
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-  		<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-  		<script>
-		    $(document).ready(function(){
-		      $('.slider').bxSlider({
-				  auto: true,
-				  autoControls: true,
-				  stopAutoOnClick: true,
-				  pager: true
-				});
-		    });
+		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+  		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  		<script>		   
+		    $( function() {
+			    $( "#slider-range" ).slider({
+			      range: true,
+			      min: 0,
+			      max: 10000,
+			      values: [ 1000, 3000 ],
+			      slide: function( event, ui ) {
+			        $( "#amount" ).val( "Rs." + ui.values[ 0 ] + " - Rs." + ui.values[ 1 ] );
+			      }
+			    });
+			    $( "#amount" ).val( "Rs." + $( "#slider-range" ).slider( "values", 0 ) +
+			      " - Rs." + $( "#slider-range" ).slider( "values", 1 ) );
+			});
 		 </script>
  	</head>
 <body>
@@ -32,7 +37,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/icons/online_shopping.png">
+						<img src="../static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -41,7 +46,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="img/icons/account.png">
+						<img src="../static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -50,7 +55,30 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="img/icons/shopping_cart.png">
+						<img src="../static/img/icons/heart.png">
+						<div class="dropdown-menu wishlist-item">
+							<table border="1">
+								<thead>
+									<tr>
+										<th>Image</th>
+										<th>Product Name</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td><img src="../static/img/product/img1.jpg"></td>
+										<td>product name</td>
+									</tr>
+									<tr>
+										<td><img src="../static/img/product/img2.jpg"></td>
+										<td>product name</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="dropdown">
+						<img src="../static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -64,14 +92,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="img/product/img1.jpg"></td>
+										<td><img src="../static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="img/product/img2.jpg"></td>
+										<td><img src="../static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -97,7 +125,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="img/icons/search.png">
+							<img src="../static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -107,42 +135,40 @@
 
 	<div class="container">
 		<main>
-			<div class="slider">
-				<div class="slide-1">
-					<img src="img/slider/slide-1.jpg">
-					<div class="slider-text">
-						<h3>Sale 40% off</h3>
-						<h2>Men's Watches</h2>
-						<a href="#">Shop Now</a>
-					</div>
-				</div>
-				<div class="slide-2">
-					<img src="img/slider/slide-2.jpg">
-					<div class="slider-text">
-						<h3>Sale 20% off</h3>
-						<h2>Women's Fashion</h2>
-						<a href="#">Shop Now</a>
-					</div>
-				</div>
-				<div class="slide-3">
-					<img src="img/slider/slide-3.jpg">
-					<div class="slider-text">
-						<h3>Sale 50% off</h3>
-						<h2>Women's Collection</h2>
-						<a href="#">Shop Now</a>
-					</div>
-				</div>		
-			</div> <!-- slider -->
+			<div class="breadcrumb">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li> / </li>
+					<li>Shop</li>
+				</ul>
+			</div> <!-- End of Breadcrumb-->
 
-			<div class="new-product-section">
-				<div class="product-section-heading">
-					<h2>Tranding Products <img src="img/icons/increase.png"></h2>
-					<h3>Most selling product for the month</h3>
+			<div class="new-product-section shop">
+				<div class="sidebar">
+					<div class="sidebar-widget">
+						<h3>Category</h3>
+						<ul>
+							<li><a href="">Men's Clothes</a></li>
+							<li><a href="">Men's Shoes</a></li>
+							<li><a href="">Men's Watches</a></li>
+							<li><a href="">Women's Handbags</a></li>
+							<li><a href="">Women's Glasses</a></li>
+
+						</ul>
+					</div>
+					<div class="sidebar-widget">
+						<h3>Range Filter</h3>
+						<p>
+						  <label for="amount"></label>
+						  <input type="text" id="amount" readonly style="border:0; color:#F0E68C;  margin-bottom: 5px;">
+						</p>						 
+						<div id="slider-range"></div>
+					</div>
 				</div>
 				<div class="product-content">
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img1.jpg">
+							<img src="../static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -153,7 +179,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img2.jpg">
+							<img src="../static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -164,7 +190,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img3.jpg">
+							<img src="../static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -175,7 +201,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img4.jpg">
+							<img src="../static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -186,7 +212,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img5.jpg">
+							<img src="../static/img/product/img5.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Glasses</h3>
@@ -197,7 +223,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img6.jpg">
+							<img src="../static/img/product/img6.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -208,7 +234,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img7.jpg">
+							<img src="../static/img/product/img7.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -219,7 +245,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="img/product/img8.jpg">
+							<img src="../static/img/product/img8.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -228,70 +254,11 @@
 							<p>Rs.5200/-</p>
 						</div>
 					</div>
-				</div>
-			</div> <!-- New Product Section -->
-
-			<div class="collection">
-				<div class="men-collection">
-					<h2>Men's Collection</h2>
-				</div>
-				<div class="women-collection">
-					<h2>Women's Collection</h2>
-				</div>
-			</div> <!-- Collection Section -->
-
-			<div class="new-product-section">
-				<div class="product-section-heading">
-					<h2>Recommend Products <img src="img/icons/good_quality.png"></h2>
-					<h3>OUR BEST PRODUCTS RECOMMENDED FOR YOU</h3>
-				</div>
-				<div class="product-content">
-					<div class="product">
-						<a href="product.html">
-							<img src="img/product/img1.jpg">
-						</a>
-						<div class="product-detail">
-							<h3>Men's / Watches</h3>
-							<h2>Gray Color Men's Watch</h2>
-							<a href="#">Add to Cart</a>
-							<p>Rs.4500/-</p>
-						</div>						
-					</div>
-					<div class="product">
-						<a href="product.html">
-							<img src="img/product/img2.jpg">
-						</a>
-						<div class="product-detail">
-							<h3>Men's / Pants</h3>
-							<h2>Levi's Jeans Pant</h2>
-							<a href="#">Add to Cart</a>
-							<p>Rs.2000/-</p>
-						</div>
-					</div>
-					<div class="product">
-						<a href="product.html">
-							<img src="img/product/img3.jpg">
-						</a>
-						<div class="product-detail">
-							<h3>Men's / Watches</h3>
-							<h2>Black Men's Watch</h2>
-							<a href="#">Add to Cart</a>
-							<p>Rs.4000/-</p>
-						</div>
-					</div>
-					<div class="product">
-						<a href="product.html">
-							<img src="img/product/img4.jpg">
-						</a>
-						<div class="product-detail">
-							<h3>Men's / Shoes</h3>
-							<h2>Nick Black Sneakers</h2>
-							<a href="#">Add to Cart</a>
-							<p>Rs.3200/-</p>
-						</div>
-					</div>
-				</div>
-			</div> <!-- Recommend Product Section -->
+				</div>				
+			</div> <!-- New Product Section -->	
+			<div class="load-more">
+				<a href="#">Load More</a>
+			</div>		
 		</main> <!-- Main Area -->
 	</div>
 
@@ -331,9 +298,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -345,7 +312,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="img/icons/paper_plane.png">
+									<img src="../static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -357,9 +324,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="img/icons/paper_money.png">
-					<img src="img/icons/visa.png">
-					<img src="img/icons/mastercard.png">
+					<img src="../static/img/icons/paper_money.png">
+					<img src="../static/img/icons/visa.png">
+					<img src="../static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
